--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,8 @@ log:
 
 # databases
 mysql:
-  host: 47.100.114.83
+  host: 172.16.1.1
   port: 3306
   user: root
-  password: golem
+  password: password
   dbname: pet-paradise
